--- a/.readme(ES-EN).md
+++ b/.readme(ES-EN).md
@@ -30,7 +30,7 @@ Se adjunta la consigna para interpretar correctamente las reglas de negocio y re
 
 ## 📌 Description  
 
-- This project was carried out for the university course **"Computer Lab IV"**.  
+- This project was developed for the university subject **"Computer Laboratory IV"**.  
 - It was graded with the **highest score: 10**.  
 
 ## 📝 Professional Observations  
